personal portfolio update

--- a/index.html
+++ b/index.html
@@ -32,6 +32,44 @@
           - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
           - In your contact me section, make the text "Phone:" and "Email:" bolded
      -->
+     <div>
+       <h1>Kristin Arakawa</h1>
+       <h2>Software Developer</h2>
+       <hr>
+       <p>My <em>favorite</em> thing about programming is the ability to create websites and 
+        apps that artistically display information.</p>
+       <img alt = "Kristin's Profile Picture"
+            src = "https://miro.medium.com/max/1280/0*b9heFhbty2eaLf9E.jpg">
+      <p>Photo adopted from Kristin's Global Wildlife Conservation profile 
+      </em>(https://medium.com/@GlobalWildlifeConservation/gwc-is-an-earth-optimist-because-2c10f4886de3)</em></p>
+
+      <h3>About Me</h3>
+      <p>"Lorem ipsum dolor sit amet. Ut porro voluptas aut recusandae aspernatur id excepturi perferendis et molestiae 
+        vitae qui quidem perferendis vel harum nostrum et numquam voluptates. A eligendi consequuntur qui nisi repellat
+        aut accusantium harum et mollitia iure eum sint perferendis ut iure sint ut molestiae dolore.</p>
+
+      <p>Ut ipsa cupiditate est autem reprehenderit non nemo expedita aut consequatur dolores sed repellendus repellendus. 
+        Qui magni nihil sit officiis nisi et beatae delectus. Aut vero minus ab necessitatibus adipisci ut quaerat 
+        assumenda ut sequi velit ab voluptatibus nihil id suscipit omnis qui porro reprehenderit. A necessitatibus 
+        consectetur aut eveniet rerum qui praesentium nihil eos facilis aperiam et aperiam ducimus.</p>
+
+      <p>Et molestiae officia et odio alias et facere ullam aut neque eveniet non atque suscipit! Id voluptatem quia 
+        ad excepturi temporibus eos minus architecto eos illum facere. Sit labore nihil est illum commodi et ducimus 
+        sunt et doloremque exercitationem."</p>
+
+        <h3>My Projects</h3>
+        <ul>
+          <li>Project 1</li>
+          <li>Project 2</li>
+          <li>Project 3</li>
+        </ul>
+
+        <h3>Contact Me</h3>
+        <p> <b>Phone:</b> (808) 867-5309</p>
+        <p><b>Email:</b>  <a href = "google.com">alohaKristin@gmail.com</a></p>
+
+     </div>
+
 </body>
 
 </html>
