--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 
 <head>
-  <style type = "text/css"></style>
+  <link
+    rel = "stylesheet"
+    href = "styles.css"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
@@ -36,7 +38,7 @@
      <div>
       
        <h1>Kristin Arakawa</h1>
-       <h2>Software Developer</h2>
+       <div class = "Software-Developer"><h2>Software Developer</h2></div>
        <hr>
        <p>My <em>favorite</em> thing about programming is the ability to create websites and 
         apps that artistically display information.</p>
