--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
      <div>
       
        <h1>Kristin Arakawa</h1>
-       <div class = "Software-Developer"><h2>Software Developer</h2></div>
+       <h2 class = "Software-Developer">Software Developer</h2>
        <hr>
        <p>My <em>favorite</em> thing about programming is the ability to create websites and 
         apps that artistically display information.</p>
