--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
 
 <head>
-  <link
-    rel = "stylesheet"
-    href = "styles.css"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
-
+    <link rel="stylesheet" typ="text/css" href="css/styles.css"/>
+</head>
 
 <body>
     <H1>
@@ -38,18 +36,18 @@
      <div>
       
        <h1>Kristin Arakawa</h1>
-       <h2 class = "Software-Developer">Software Developer</h2>
+       <h2 class="section-font">Software Developer</h2>
        <hr>
        <p>My <em>favorite</em> thing about programming is the ability to create websites and 
         apps that artistically display information.</p>
-       <img alt = "Kristin's Profile Picture"
+       <img image="profile-picture" alt = "Kristin's Profile Picture"
             src = "https://miro.medium.com/max/1280/0*b9heFhbty2eaLf9E.jpg">
       <p>Photo adopted from Kristin's Global Wildlife Conservation profile 
       <em>(https://medium.com/@GlobalWildlifeConservation/gwc-is-an-earth-optimist-because-2c10f4886de3)</em></p>
 
 
       
-      <div><h3>About Me</h3></div>
+      <div><h3 class="section-font">About Me</h3></div>
       <p>"Lorem ipsum dolor sit amet. Ut porro voluptas aut recusandae aspernatur id excepturi perferendis et molestiae 
         vitae qui quidem perferendis vel harum nostrum et numquam voluptates. A eligendi consequuntur qui nisi repellat
         aut accusantium harum et mollitia iure eum sint perferendis ut iure sint ut molestiae dolore.</p>
@@ -63,12 +61,13 @@
         ad excepturi temporibus eos minus architecto eos illum facere. Sit labore nihil est illum commodi et ducimus 
         sunt et doloremque exercitationem."</p>
 
-        <div><h3>My Projects</h3></div>
+        <div class="main-section"><h3>My Projects</h3>
         <ul>
           <li>Project 1</li>
           <li>Project 2</li>
           <li>Project 3</li>
         </ul>
+        </div>
 
         <div><h3>Contact Me</h3></div>
         <p> <b>Phone:</b> (808) 867-5309</p>
@@ -78,6 +77,4 @@
      </div>
 
 </body>
-</style>
-</head>
 </html>
