--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
        <hr>
        <p>My <em>favorite</em> thing about programming is the ability to create websites and 
         apps that artistically display information.</p>
-       <img image="profile-picture" alt = "Kristin's Profile Picture"
+       <img class="profile-picture" alt = "Kristin's Profile Picture"
             src = "https://miro.medium.com/max/1280/0*b9heFhbty2eaLf9E.jpg">
       <p>Photo adopted from Kristin's Global Wildlife Conservation profile 
       <em>(https://medium.com/@GlobalWildlifeConservation/gwc-is-an-earth-optimist-because-2c10f4886de3)</em></p>
